src/objects/Volunteer_Training__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndDateTime__c</fullName>
        <description>The date and time when this training is expected to end.</description>
        <inlineHelpText>The date and time when this training is expected to end.</inlineHelpText>
        <label>End Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>The location where this training will take place.</description>
        <inlineHelpText>The location where this training will take place.</inlineHelpText>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDateTime__c</fullName>
        <description>The date and time when this training starts.</description>
        <inlineHelpText>The date and time when this training starts.</inlineHelpText>
        <label>Start Date and Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Volunteer Training</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Trainings</fullName>
        <columns>NAME</columns>
        <columns>StartDateTime__c</columns>
        <columns>Location__c</columns>
        <filterScope>Mine</filterScope>
        <label>All Trainings</label>
    </listViews>
    <nameField>
        <displayFormat>VT-{00000}</displayFormat>
        <label>Training Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Trainings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>